# FlappyGenius

./: .gitignore  CMakeLists.txt  README.md
include/: event_handler.h  main.h
src/: event_handler.c  main.c  obstacle.c  utilities.c
